Mais dites-donc, personne n'avait vu ma merveilleuse API de loots ?